--- a/src/stelar_client/test.ipynb
+++ b/src/stelar_client/test.ipynb
@@ -2,155 +2,176 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from client import Client\n",
+    "from model import Resource, Dataset\n",
+    "from IPython.display import display\n",
+    "\n",
+    "stelar = Client(\"https://klms.stelar.gr/stelar\", username=\"admin\", password=\"stelartuc\")\n",
+    "\n",
+    "\n",
+    "dset = stelar.catalog.get_dataset(\"test_client_dataset_2\")\n",
+    "display(dset)\n",
+    "\n",
+    "\n",
+    "rsrc = Resource(\"s3://klms-bucket/test_path/obj.txt\",\"TXT\",\"A test resource published from the Client\")\n",
+    "\n",
+    "stelar.catalog.publish_dataset_resource(dset, rsrc)\n",
+    "display(dset)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from client import Client\n",
+    "from model import Resource, Dataset\n",
+    "from IPython.display import display\n",
+    "\n",
+    "stelar = Client(\"https://klms.stelar.gr/stelar\", username=\"admin\", password=\"stelartuc\")\n",
+    "\n",
+    "policy_obj = stelar.admin.get_policy_info(\"active\")\n",
+    "\n",
+    "display(policy_obj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from client import Client\n",
+    "from model import Resource, Dataset, Policy\n",
+    "from IPython.display import display\n",
+    "\n",
+    "stelar = Client(\"https://klms.stelar.gr/stelar\", username=\"admin\", password=\"stelartuc\")\n",
+    "\n",
+    "stelar.admin.get_policy_list()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from client import Client\n",
+    "from model import Resource, Dataset\n",
+    "from IPython.display import display\n",
+    "\n",
+    "stelar = Client(\"https://klms.stelar.gr/stelar\", username=\"admin\", password=\"stelartuc\")\n",
+    "\n",
+    "\n",
+    "dset_list = stelar.catalog.get_datasets()\n",
+    "for dset in dset_list:\n",
+    "    display(dset)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from client import Client\n",
+    "from model import Resource, Dataset\n",
+    "from IPython.display import display\n",
+    "\n",
+    "stelar = Client(\"https://klms.stelar.gr/stelar\", username=\"admin\", password=\"stelartuc\")\n",
+    "\n",
+    "resource1 = Resource(\"s3://path/path/foo1.txt\",\"TXT\",\"Resource 1\")\n",
+    "resource2 = Resource(\"s3://path/path/foo2.txt\",\"TXT\",\"Resource 2\")\n",
+    "resource3 = Resource(\"s3://path/path/foo3.txt\",\"TXT\",\"Resource 3\")\n",
+    "resource4 = Resource(\"s3://path/path/foo4.txt\",\"TXT\",\"Resource 4\")\n",
+    "resource5 = Resource(\"s3://path/path/foo5.txt\",\"TXT\",\"Resource 5\")\n",
+    "\n",
+    "resources = [resource1,resource2,resource3,resource4,resource5]\n",
+    "\n",
+    "\n",
+    "dset = Dataset(\"Test Client Dataset 3\",\"a dataset to test STELAR client\",[\"STELAR\",\"test\"])\n",
+    "stelar.catalog.create_dataset(dset)\n",
+    "\n",
+    "display(dset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from client import Client\n",
+    "from model import Resource, Dataset\n",
+    "from IPython.display import display\n",
+    "\n",
+    "stelar = Client(\"https://klms.stelar.gr/stelar\", username=\"admin\", password=\"stelartuc\")\n",
+    "\n",
+    "\n",
+    "resource_list = stelar.catalog.get_dataset_resources(\"nikolakis_ananeomenos\")\n",
+    "\n",
+    "for resource in resource_list:\n",
+    "    display(resource)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from client import Client\n",
+    "from model import Resource, Dataset\n",
+    "from IPython.display import display\n",
+    "\n",
+    "stelar = Client(\"https://klms.stelar.gr/stelar\", username=\"admin\", password=\"stelartuc\")\n",
+    "\n",
+    "\n",
+    "resource = stelar.catalog.get_resource(\"5f0fbbfb-ef94-4fba-adf0-ef639461e330\")\n",
+    "\n",
+    "display(resource)\n",
+    "\n",
+    "dset = stelar.catalog.get_dataset(\"8a4fdc95-4ae4-42fc-b23d-b4b570f9781b\")\n",
+    "\n",
+    "display(dset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from client import Client\n",
+    "from model import Resource, Dataset\n",
+    "from IPython.display import display\n",
+    "\n",
+    "stelar = Client(\"https://klms.stelar.gr/stelar\", username=\"admin\", password=\"stelartuc\")\n",
+    "\n",
+    "\n",
+    "resource = stelar.catalog.delete_resource(\"5f0fbbfb-ef94-4fba-adf0-ef639461e330\")\n",
+    "\n",
+    "\n",
+    "dset = stelar.catalog.get_resource(\"5f0fbbfb-ef94-4fba-adf0-ef639461e330\")\n",
+    "display(resource)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <strong>Dataset Summary:</strong>\n",
-       "        <table>\n",
-       "            <tr><th>Attribute</th><th>Value</th></tr>\n",
-       "            <tr><td>ID</td><td>2a161060-aa29-4f4a-8312-47dbd9119c7c</td></tr>\n",
-       "            <tr><td>Title</td><td>Test Data API 1</td></tr>\n",
-       "            <tr><td>Notes</td><td>This dataset contains Points of Interest extracted from OpenStreetMap</td></tr>\n",
-       "            <tr><td>Tags</td><td>Bavaria, STELAR</td></tr>\n",
-       "            <tr><td>Modified Date</td><td>2024-11-28T17:05:46.776572</td></tr>\n",
-       "        </table>\n",
-       "        <br>\n",
-       "        <strong>Dataset Resources:</strong>\n",
-       "        <table border=\"1\" style=\"border-collapse: collapse; width: 100%;\">\n",
-       "            <tr><th>ID</th><th>Name</th><th>URL</th><th>Format</th></tr>\n",
-       "            \n",
-       "                <tr>\n",
-       "                    <td>e40325c7-93b2-48d2-82ef-bcbd14c57697</td>\n",
-       "                    <td>New Resource</td>\n",
-       "                    <td><a href=\"s3://klms-bucket/j\" target=\"_blank\">s3://klms-bucket/j</a></td>\n",
-       "                    <td>TXT</td>\n",
-       "                </tr>\n",
-       "                \n",
-       "                <tr>\n",
-       "                    <td>88d67200-f518-4458-a6c3-fc4f2b38bb2b</td>\n",
-       "                    <td>None</td>\n",
-       "                    <td><a href=\"\" target=\"_blank\"></a></td>\n",
-       "                    <td></td>\n",
-       "                </tr>\n",
-       "                \n",
-       "                <tr>\n",
-       "                    <td>fc741675-aeb4-4a98-810e-ab2bf1ba522d</td>\n",
-       "                    <td>JBJHBHJ</td>\n",
-       "                    <td><a href=\"http://GUGYUGU\" target=\"_blank\">http://GUGYUGU</a></td>\n",
-       "                    <td></td>\n",
-       "                </tr>\n",
-       "                \n",
-       "                <tr>\n",
-       "                    <td>f12f88cf-3789-4d05-b5b4-03d860fd0422</td>\n",
-       "                    <td>LAI profile in JSON</td>\n",
-       "                    <td><a href=\"s3://klms-bucket/j\" target=\"_blank\">s3://klms-bucket/j</a></td>\n",
-       "                    <td>JSON</td>\n",
-       "                </tr>\n",
-       "                \n",
-       "                <tr>\n",
-       "                    <td>4185428a-e46d-4388-9f52-3e6b765f0734</td>\n",
-       "                    <td>New Resource</td>\n",
-       "                    <td><a href=\"s3://klms-bucket\" target=\"_blank\">s3://klms-bucket</a></td>\n",
-       "                    <td>TXT</td>\n",
-       "                </tr>\n",
-       "                \n",
-       "                <tr>\n",
-       "                    <td>9d912de9-7725-451d-9416-68fe4c061785</td>\n",
-       "                    <td>New Resource 2</td>\n",
-       "                    <td><a href=\"s3://klms-bucket\" target=\"_blank\">s3://klms-bucket</a></td>\n",
-       "                    <td>TXT</td>\n",
-       "                </tr>\n",
-       "                \n",
-       "        </table>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<model.Dataset at 0x1e1c6a64410>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <strong>Dataset Summary:</strong>\n",
-       "        <table>\n",
-       "            <tr><th>Attribute</th><th>Value</th></tr>\n",
-       "            <tr><td>ID</td><td>2a161060-aa29-4f4a-8312-47dbd9119c7c</td></tr>\n",
-       "            <tr><td>Title</td><td>Test Data API 1</td></tr>\n",
-       "            <tr><td>Notes</td><td>This dataset contains Points of Interest extracted from OpenStreetMap</td></tr>\n",
-       "            <tr><td>Tags</td><td>Bavaria, STELAR</td></tr>\n",
-       "            <tr><td>Modified Date</td><td>2024-11-28T17:05:46.776572</td></tr>\n",
-       "        </table>\n",
-       "        <br>\n",
-       "        <strong>Dataset Resources:</strong>\n",
-       "        <table border=\"1\" style=\"border-collapse: collapse; width: 100%;\">\n",
-       "            <tr><th>ID</th><th>Name</th><th>URL</th><th>Format</th></tr>\n",
-       "            \n",
-       "                <tr>\n",
-       "                    <td>e40325c7-93b2-48d2-82ef-bcbd14c57697</td>\n",
-       "                    <td>New Resource</td>\n",
-       "                    <td><a href=\"s3://klms-bucket/j\" target=\"_blank\">s3://klms-bucket/j</a></td>\n",
-       "                    <td>TXT</td>\n",
-       "                </tr>\n",
-       "                \n",
-       "                <tr>\n",
-       "                    <td>88d67200-f518-4458-a6c3-fc4f2b38bb2b</td>\n",
-       "                    <td>None</td>\n",
-       "                    <td><a href=\"\" target=\"_blank\"></a></td>\n",
-       "                    <td></td>\n",
-       "                </tr>\n",
-       "                \n",
-       "                <tr>\n",
-       "                    <td>fc741675-aeb4-4a98-810e-ab2bf1ba522d</td>\n",
-       "                    <td>JBJHBHJ</td>\n",
-       "                    <td><a href=\"http://GUGYUGU\" target=\"_blank\">http://GUGYUGU</a></td>\n",
-       "                    <td></td>\n",
-       "                </tr>\n",
-       "                \n",
-       "                <tr>\n",
-       "                    <td>f12f88cf-3789-4d05-b5b4-03d860fd0422</td>\n",
-       "                    <td>LAI profile in JSON</td>\n",
-       "                    <td><a href=\"s3://klms-bucket/j\" target=\"_blank\">s3://klms-bucket/j</a></td>\n",
-       "                    <td>JSON</td>\n",
-       "                </tr>\n",
-       "                \n",
-       "                <tr>\n",
-       "                    <td>4185428a-e46d-4388-9f52-3e6b765f0734</td>\n",
-       "                    <td>New Resource</td>\n",
-       "                    <td><a href=\"s3://klms-bucket\" target=\"_blank\">s3://klms-bucket</a></td>\n",
-       "                    <td>TXT</td>\n",
-       "                </tr>\n",
-       "                \n",
-       "                <tr>\n",
-       "                    <td>9d912de9-7725-451d-9416-68fe4c061785</td>\n",
-       "                    <td>New Resource 2</td>\n",
-       "                    <td><a href=\"s3://klms-bucket\" target=\"_blank\">s3://klms-bucket</a></td>\n",
-       "                    <td>TXT</td>\n",
-       "                </tr>\n",
-       "                \n",
-       "                <tr>\n",
-       "                    <td>1b165496-8b42-4d04-ad8f-8988431fa52c</td>\n",
-       "                    <td>A test resource published from the Client</td>\n",
-       "                    <td><a href=\"s3://klms-bucket/test_path/obj.txt\" target=\"_blank\">s3://klms-bucket/test_path/obj.txt</a></td>\n",
-       "                    <td>TXT</td>\n",
-       "                </tr>\n",
-       "                \n",
-       "        </table>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<model.Dataset at 0x1e1c6a64410>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset with id: test_client_dataset_3 deleted successfully\n"
+     ]
     }
    ],
    "source": [
@@ -158,27 +179,42 @@
     "from model import Resource, Dataset\n",
     "from IPython.display import display\n",
     "\n",
-    "stelar = Client(\"https://klms.stelar.gr/stelar\", username=\"admin\", password=\"stelartuc\", version=\"v2\")\n",
+    "stelar = Client(\"https://klms.stelar.gr/stelar\", username=\"admin\", password=\"stelartuc\")\n",
     "\n",
     "\n",
-    "dset = stelar.catalog.get_dataset(\"dimitris\")\n",
-    "display(dset)\n",
+    "resource = stelar.catalog.delete_dataset(\"test_client_dataset_3\")\n",
     "\n",
     "\n",
-    "rsrc = Resource(\"s3://klms-bucket/test_path/obj.txt\",\"TXT\",\"A test resource published from the Client\")\n",
-    "stelar.catalog.publish_dataset_resource(dset, rsrc)\n",
+    "# dset = stelar.catalog.get_resource(\"5f0fbbfb-ef94-4fba-adf0-ef639461e330\")\n",
+    "# display(resource)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from client import Client\n",
+    "from model import Resource, Dataset\n",
+    "from IPython.display import display\n",
     "\n",
+    "stelar = Client(\"https://klms.stelar.gr/stelar\", username=\"admin\", password=\"stelartuc\")\n",
     "\n",
-    "display(dset)\n",
+    "resource = stelar.catalog.get_resource(\"f807fd44-3421-47c2-8654-3e1cb4630d5e\")\n",
+    "display(resource)\n",
     "\n",
+    "resource.name = \"Resource fully updated\"\n",
     "\n",
-    "\n"
+    "stelar.catalog.patch_resource(resource)\n",
+    "\n",
+    "display(resource)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "kc_minio",
    "language": "python",
    "name": "python3"
   },
